--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -16,20 +16,40 @@ label {
   opacity: 0.66;
 }
 
+body,
+html {
+  margin: 0;
+  padding: 0;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
 a {
   text-decoration: none;
+  border-color: inherit;
   color: inherit;
 }
 
 button {
+  @extend .row-c-c;
   padding: 0.5rem 0.66rem;
   border: 1px solid #ccc;
   border-radius: 0.5rem;
   background: transparent;
+  gap: 0.5rem;
+  transition: all 150ms;
+  cursor: pointer;
   &.filled {
     background: #8465cc;
     color: #fff;
     border: none;
+    &:hover {
+      opacity: 0.8;
+    }
+  }
+  &:hover {
+    backdrop-filter: brightness(90%);
   }
 }
 
