--- a/frontend/components/Header/_index.scss
+++ b/frontend/components/Header/_index.scss
@@ -1,6 +1,6 @@
 .header {
   @extend .row-c-c, .w-100;
-  position: fixed;
+  position: sticky;
   top: 0;
   height: 64px;
   background: rgba(255, 255, 255, 0.95);
