--- a/frontend/styles/_mixins.scss
+++ b/frontend/styles/_mixins.scss
@@ -31,3 +31,24 @@
     }
   }
 }
+
+// Mixin for tablet devices
+@mixin tablet {
+  @media (min-width: 768px) and (max-width: 1280px) {
+    @content;
+  }
+}
+
+// Mixin for mobile devices
+@mixin mobile {
+  @media (max-width: 767px) {
+    @content;
+  }
+}
+
+// Mixin for mobile devices
+@mixin tabletandmobile {
+  @media (max-width: 1280px) {
+    @content;
+  }
+}
