--- a/frontend/styles/index.scss
+++ b/frontend/styles/index.scss
@@ -7,6 +7,8 @@
 @import "../components/OpenMarker";
 @import "../components/InfoSection";
 @import "../components/Footer";
+@import "../components/ActivityRowItem";
+@import "../components/ProposalRowItem";
 
 span,
 label,
@@ -55,6 +57,14 @@ h2 {
   font-weight: 400;
 }
 
+label {
+  font-size: 1rem;
+  font-weight: 500;
+  color: #452a83;
+  opacity: 0.5;
+  line-height: 1.5;
+}
+
 span {
   font-size: 1rem;
   font-weight: 500;
@@ -63,15 +73,22 @@ span {
   line-height: 1.5;
 }
 
+label {
+  font-size: 1rem;
+}
+
 button {
   @extend .row-c-c;
-  padding: 0.5rem 0.66rem;
+  padding: 0.66rem 1rem;
   border: none;
   border-radius: 0.5rem;
   background: transparent;
   gap: 0.5rem;
   transition: all 150ms;
   cursor: pointer;
+  font-size: 1rem;
+  color: #452a83;
+  font-weight: 500;
 
   background: #f5efff;
 
@@ -106,4 +123,19 @@ button {
 .disabled {
   pointer-events: none;
   opacity: 0.66;
+}
+
+.gradient {
+  background: radial-gradient(100% 100% at 50% 0%, rgba(255, 244, 255, 0) 0%, rgba(251, 38, 255, 0.33) 100%),
+    linear-gradient(180deg, rgba(255, 68, 68, 0) 0%, rgba(60, 0, 255, 0.1) 100%),
+    radial-gradient(118.02% 164.92% at 50% 100%, rgba(255, 153, 0, 0) 0%, rgba(98, 0, 255, 0.25) 100%), #fffcf5;
+  background-blend-mode: soft-light, overlay, multiply, normal;
+}
+
+.line-1 {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  white-space: wrap;
+  overflow: hidden;
 }
