--- a/frontend/components/Header/_index.scss
+++ b/frontend/components/Header/_index.scss
@@ -19,7 +19,7 @@
   }
   &--row {
     @extend .row-sb-c;
-    gap: 0.25rem;
+    gap: 0.5rem;
   }
   &--inner {
     @extend .row-sb-c, .w-100;
@@ -31,5 +31,7 @@
   }
   button {
     text-transform: capitalize;
+    margin: 0;
+    background: white;
   }
 }
